Fix Add Teams button not being aligned

--- a/src/trustedlogin-dist.css
+++ b/src/trustedlogin-dist.css
@@ -781,10 +781,6 @@ select {
   border-width: 0;
 }
 
-.pointer-events-none {
-  pointer-events: none;
-}
-
 .pointer-events-auto {
   pointer-events: auto;
 }
@@ -823,10 +819,6 @@ select {
 
 .-right-52 {
   right: -13rem;
-}
-
-.left-0 {
-  left: 0px;
 }
 
 .left-4 {
@@ -1330,10 +1322,6 @@ select {
   white-space: nowrap;
 }
 
-.\!rounded-lg {
-  border-radius: 0.5rem !important;
-}
-
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1348,10 +1336,6 @@ select {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.\!border {
-  border-width: 1px !important;
 }
 
 .border {
@@ -1372,11 +1356,6 @@ select {
 
 .border-t {
   border-top-width: 1px;
-}
-
-.\!border-gray-300 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity)) !important;
 }
 
 .border-gray-300 {
@@ -1401,11 +1380,6 @@ select {
 
 .border-transparent {
   border-color: transparent;
-}
-
-.\!bg-white {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-black {
@@ -1483,11 +1457,6 @@ select {
 
 .p-8 {
   padding: 2rem;
-}
-
-.\!py-3 {
-  padding-top: 0.75rem !important;
-  padding-bottom: 0.75rem !important;
 }
 
 .px-2 {
@@ -1573,14 +1542,6 @@ select {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.\!pl-10 {
-  padding-left: 2.5rem !important;
-}
-
-.\!pr-3 {
-  padding-right: 0.75rem !important;
 }
 
 .pb-0 {
@@ -1717,8 +1678,8 @@ select {
   line-height: 1rem;
 }
 
-.leading-5 {
-  line-height: 1.25rem;
+.leading-7 {
+  line-height: 1.75rem;
 }
 
 .leading-none {
@@ -1727,6 +1688,14 @@ select {
 
 .leading-tight {
   line-height: 1.25;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
+}
+
+.leading-5 {
+  line-height: 1.25rem;
 }
 
 .tracking-wide {
@@ -1786,21 +1755,6 @@ select {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.placeholder-gray-500::-webkit-input-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-gray-500:-ms-input-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-gray-500::placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-placeholder-opacity));
 }
 
 .opacity-30 {
@@ -2317,11 +2271,6 @@ body .bg-blue-tl:hover {
   .sm\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
-  }
-
-  .sm\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
   }
 
   .sm\:py-8 {
